[package]
name = "rescue-prime-optimized"
version = "0.4.0"
description = "Miden Cryptographic primitives"
authors = ["miden contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/jonathanxuu/RescuePrimeOptimiezd"
documentation = "https://docs.rs/miden-crypto/0.4.0"
categories = ["cryptography", "no-std"]
keywords = ["miden", "crypto", "hash", "merkle"]
edition = "2021"
rust-version = "1.67"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["blake3/default", "std", "winter_crypto/default", "winter_math/default", "winter_utils/default"]
std = ["blake3/std", "winter_crypto/std", "winter_math/std", "winter_utils/std"]

[dependencies]
sp-std = { git = "https://github.com/paritytech/substrate.git", default-features = false }
blake3 = { version = "1.3", default-features = false }
winter_crypto = { version = "0.6", package = "winter-crypto", default-features = false }
winter_math = { version = "0.6", package = "winter-math", default-features = false }
winter_utils = { version = "0.6", package = "winter-utils", default-features = false }
wasm-bindgen = "0.2.83"
wasm-bindgen-test = "0.3.24"
console_error_panic_hook = "0.1.6"


[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
proptest = "1.1.0"
rand_utils = { version = "0.6", package = "winter-rand-utils" }
